--- a/package.json
+++ b/package.json
@@ -8,5 +8,17 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "http-errors": "^2.0.0",
+    "joi": "^17.11.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.6.5",
+    "xmlhttprequest": "^1.8.0"
+  }
 }
